--- a/app/views/admins/user_history.html.erb
+++ b/app/views/admins/user_history.html.erb
@@ -28,7 +28,7 @@
   <%= history.price %>
   </td>
   <td>
-  <%= history.cart.address_id %>
+  <%= history.cart.address %>
   </td>
   <td>
   	ステータス
