--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -41,6 +41,7 @@
                 <span class="cart-item-sub-total">小計：<%= (c.sub_total).to_i %>円（税込）</span>
                 <p>数量：<%= f.number_field :quantity, value: c.quantity.to_i, min: 1 %></p>
                 <%= f.hidden_field :product_id, value: c.product_id %>
+                <%= f.hidden_field :status, value: '受付' %>
                 <%= f.submit "数量を更新", class: "btn btn-warning btn-xs" %>
                 <%= link_to 'カートから削除する',({controller: 'cart_items', action: 'destroy_item', id: c.id }), method: :delete %>
               <% end %>
