--- a/app/views/artists/product_history.html.erb
+++ b/app/views/artists/product_history.html.erb
@@ -4,47 +4,56 @@
 
 
 <table class='table table-hover table-inverse'>
-	<thead>
-	    <tr>
-		    <th>購入者名</th>
-		    <th>購入日時</th>
-		    <th>購入内容</th>
-		    <th>購入価格小計</th>
-		    <th>購入価格総計</th>
-		    <th>送付先</th>
-		    <th>ステータス</th>
-		    <th colspan="6"></th>
-	    </tr>
-	  </thead>
-	<tbody>
-		<% @tests.each do |test| %>
-		<tr>
-			<td>
-				<%= test.cart.user.name %>
-			</td>
+  <thead>
+    <tr>
+      <th>購入者名</th>
+      <th>購入日時</th>
+      <th>購入内容</th>
+      <th>購入価格小計</th>
+      <th>購入枚数</th>
+      <th>送付先</th>
+      <th>ステータス</th>
+      <th colspan="6"></th>
+    </tr>
+  </thead>
+<tbody>
+<% @histories.each do |h| %>
+<tr>
+  <!--購入者名前-->
+  <td>
+	<%= h.cart.user.name %>
+  </td>
 
-			<td>
-				<%= test.cart.added_at %>
-			</td>
+  <!--購入日時-->
+  <td>
+	<%= h.cart.added_at %>
+  </td>
 
-			<!--購入内容-->
-			<td>
-		  	</td>
+  <!--購入内容-->
+  <td>
+  	<%= h.product.name %>
+  </td>
 
-			<!--小計一覧-->
-		  	<td>
-			</td>
-			<!--総計-->
-			<td>
-				<%= test.cart.total_price %>
-			</td>
-			<!--送付先-->
-			<td>
-			</td>
-			<!--ステータス-->
-			<td>
-				<%= test.cart.status %>
-			</td>
-		</tr>
-		<% end %>
+  <!--小計-->
+  <td>
+  	<%= h.price %>
+  </td>
 
+  <!--購入枚数-->
+  <td>
+  	<%= h.quantity %>
+　</td>
+
+  <!--送付先-->
+  <td>
+  </td>
+
+  <!--ステータス-->
+  <td>
+  	<%= link_to @edit_cart_item_path(h.id) do %>
+  		<%= h.status %>
+  	<% end %>
+  </td>
+<% end %>
+</tbody>
+</table>
