--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,10 +39,9 @@
 				</table>
 				<%= paginate @favorites, class: "paginate" %>
 		</div>
-		<!-- ランキング -->
+		<!-- 購入履歴 -->
 		<div class="col-xs-4">
-			<div class="ranking">購入履歴</div>
-		</div>
-		<!-- ランキング -->
+			<div class="history">購入履歴</div>
+		<!-- 購入履歴 -->
 	</div>
 </div>
