--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -61,7 +61,7 @@
 			<div class="border3"> コメント</div>
 			<div class="comment">
 				    <% @product.comments.each do |comment| %>
-				    	<p>名前：<%= comment.user.name %>
+				    	<p>名前：<%= comment.user.hundle_name %>
 				    	 / 投稿日時：<%= comment.created_at.strftime('%Y/%m/%d') %><p>
 					    <p>コメント：<%= comment.comment_text %>
 				         <%= link_to "削除", product_comments_path(@product.id), method: :delete %><p>
