add address page

--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Addresses#show</h1>
-<p>Find me in app/views/addresses/show.html.erb</p>
+<h1>送付先住所</h1>
+<p>名前:<%= @address.other_name %></p>
+<p>郵便番号：<%= @address.other_postal_code %></p>
+<p>住所：<%= @address.other_address %></p>
