--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -39,7 +39,7 @@
 <!-- ランキング -->
 		<div class="col-xs-4">
 			<div class="ranking">
-				<h4> 売れ筋ランキング（過去10日間）</h4>
+				<h4> 累計売り上げランキング TOP10</h4>
 				<div class="ranking_rank">
 					<li>1</li>
 					<%= image_tag 'rank1.png', class:"rank1" %>
