--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -4,11 +4,8 @@
 <p><%= @artist.member %></p>
 
 <% if @artist == current_artist %>
-	<p><%= link_to "New Product", new_product_path %>
-	 | <%= link_to "Artist Edit", edit_artist_path(@artist.id) %> | 
+	<%= link_to "Artist Edit", edit_artist_path(@artist.id) %>
 <% end %>
-<%= link_to "Logout", destroy_artist_session_path, method: :delete %></p>
-
 <!-- 以下出品一覧 -->
 <% @products.each do |product| %>
 	<%= link_to product_path(product.id) do %>
