--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,59 +2,7 @@
 
 <h2> 商品情報編集 </h2>
 
-<!--後でemailをname(ログインしているアーティスト名に変更)-->
 <h4> アーティスト名</h4>
 <%= current_artist.name%>
 
-<%= form_for(@product) do |f| %>
-
-  <% if @product.errors.any? %>  <!-- form forの@bookに合わせる -->
-      <div id="error_explanation" class="alert-danger">
-        <h2><%= @product.errors.count %> errors prohibited this obj from being saved:</h2>
-        <ul>
-          <% @product.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      </div>
-  <% end %>
-
-  <h4> シングル/アルバム名</h4>
-  <%= f.text_field :name, class: "" %>
-
-  <%= f.fields_for :disc_numbers do |discnumber| %>
-    
-    <h4> 枚数</h4>
-    <%= discnumber.text_field :disc_name, class: "" %>
-
-      <%= discnumber.fields_for :musics do |music| %>
-
-        <h4>曲名</h4>
-        <%= music.text_field :name %>
-        <h4>順番</h4>
-        <%= music.text_field :truck_number %>
-
-      <% end %>
-  <% end %>
-
-  <h4> 値段</h4>
-  <%= f.text_field :price, class: "" %>
-
-  <h4> レーベル名</h4>
-  <%= f.text_field :label, class: "" %>
-
-  <h4> ジャンル</h4>
-  <%= f.text_field :genre, class: "" %>
-
-  <h4> 在庫数</h4>
-  <%= f.text_field :stock, class: "" %>
-
-  <h4> ジャケット写真</h4>
-  <%= f.attachment_field :image, class: "" %>
-
-  <h4> 動画URL</h4>
-  <%= f.text_area :movie_url, class: "" %>
-
-  <p><%= f.submit '更新' %></p>
-
-<% end %>
+<%= render "form" %>
