--- a/app/views/cart_items/edit.html.erb
+++ b/app/views/cart_items/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>商品ステータス編集</h2>
 
-<table>
+<table class="table">
 	<tr>
 		<th>購入ユーザ名</th>
 		<td><%= @cart_item.cart.user.name %></td>
@@ -8,7 +8,7 @@
 
 	<tr>
 		<th>シングル/アルバム名</th>
-		<td style="padding-left: 30px;"><%= @cart_item.product.name %></td>
+		<td><%= @cart_item.product.name %></td>
 	</tr>
 	<tr>
 		<th>価格</th>
@@ -30,20 +30,19 @@
 		<th>送付先住所</th>
 		<td><%= @user.other_address %></td>
 	</tr>
-	
+	<tr>
+		<th>購入日時</th>
+		<td><%= @cart_item.cart.added_at %></td>
+	</tr>
+	<tr>
+		<th>商品ステータス</th>
+		<td>
+		<%= form_for @cart_item, :url => {:controller => :cart_items, :action => :update_item, :id => @cart_item.id}  do |f| %>
+		    <%= f.hidden_field :quantity, value: @cart_item.quantity %>
+		    <%= f.hidden_field :product_id, value: @cart_item.product_id %>
+		    <%= f.select :status, CartItem.statuses.keys.to_a, {} %>
+		    <%= f.submit "ステータスを更新", class: "btn col-lg-12 btn-primary" %>
+		<% end %>
+		</td>
+	</tr>
 </table>
-
-
-
-<br>
-<br>
-<br>
-<div>
-	t.integer "product_id"
-    t.integer "cart_id"
-    t.integer "price"
-    t.integer "quantity"
-    t.integer "status", limit: 1, default: 0, null: false
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-</div>
