--- a/app/views/artists/product_history.html.erb
+++ b/app/views/artists/product_history.html.erb
@@ -1,6 +1,4 @@
-<h3>Artists#history</h3>
-
-<h1> <%= current_artist.name %>の受注履歴 </h1>
+<h2> <%= current_artist.name %>様の受注履歴 </h2>
 
 <table class='table table-hover table-inverse'>
   <thead>
