--- a/app/assets/stylesheets/cart_items.scss
+++ b/app/assets/stylesheets/cart_items.scss
@@ -2,19 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.status-description {
-	width: 50%;
-	border: solid 0.5px #A4A4A4;
-	border-radius: 10px;
-	padding: 10px;
-	margin-bottom: 30px;
-}
-
-.only-customer {
-	font-size: 8px;
-	padding-left: 20px;
-}
-
 .product-history-image {
 	width: 100%;
 	height: 100%;
@@ -29,7 +16,7 @@
 	color: #DF0202;
 }
 
-.select-status{
+.select-status---{
 	color: #DF0202;
 	font-weight: bold;
 	font-size: 20px;
@@ -40,7 +27,7 @@
 	float: left;
 }
 
-.update-status-button{
+.update-status-button---{
 	width: 10%;
 	float: left;
 }
