--- a/app/views/artists/product_history.html.erb
+++ b/app/views/artists/product_history.html.erb
@@ -1,19 +1,17 @@
-<h3>Artists#history</h3>
-
-<h1> アーティスト受注履歴 </h1>
-
+<h2> <%= current_artist.name %>様の受注履歴 </h2>
 
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
       <th>購入者名</th>
-      <th>購入日時</th>
-      <th>購入内容</th>
-      <th>購入価格小計</th>
-      <th>購入枚数</th>
-      <th>送付先</th>
+      <th>カートID</th>
+      <th>受注日時</th>
+      <th>受注商品名</th>
+      <th>商品価格（税込）</th>
+      <th>受注枚数</th>
+      <th>小計（税込）</th>
+      <th>送付先氏名|住所</th>
       <th>ステータス</th>
-      <th colspan="6"></th>
     </tr>
   </thead>
 <tbody>
@@ -22,6 +20,11 @@
   <!--購入者名前-->
   <td>
 	<%= h.cart.user.name %>
+  </td>
+
+  <!--カートID-->
+  <td>
+  <%= h.cart_id %>
   </td>
 
   <!--購入日時-->
@@ -34,9 +37,9 @@
   	<%= h.product.name %>
   </td>
 
-  <!--小計-->
+  <!--単価-->
   <td>
-  	<%= h.price %>
+  	<%= h.price.to_s(:delimited) %>円
   </td>
 
   <!--購入枚数-->
@@ -44,16 +47,25 @@
   	<%= h.quantity %>
 　</td>
 
+  <!--小計-->
+  <td style="color: #DF0202">
+    <%= (h.price * h.quantity).to_s(:delimited) %>円
+　</td>
+
   <!--送付先-->
   <td>
+  	<%= @user.other_name %>|
+    <%= @user.other_postal_code %>
+    <%= @user.other_address %>
   </td>
 
   <!--ステータス-->
   <td>
-  	<%= link_to @edit_cart_item_path(h.id) do %>
+  	<%= link_to edit_cart_item_path(h.id) do %>
   		<%= h.status %>
   	<% end %>
   </td>
+
 <% end %>
 </tbody>
 </table>
