--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,95 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="j">
   <head>
-    <title>Digru</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
+    <title>DIGRU</title>
+
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="bootstrap.min.css" type="text/css">
+
+    <!-- Font Awesome Icon -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" >
+
+    <!-- Custom stlylesheet -->
+    <link rel="stylesheet" href="style.css" type="text/css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" >
+
   </head>
-<header class="navbar navbar-default">
-  <div class="container">
-    <nav class="nav navbar-nav navbar-left">
-      <span class="title">
-        <h1><%= link_to products_path do %>DIGRU<% end %></h1>
-      </span>
-    </nav>
 
-    <nav>
-      <% if user_signed_in? %>
-      <ul class="nav navbar-nav navbar-right">
-        <p>こんにちは　<%= current_user.name %>さん</p>
-        <li>
-          <%= link_to "カート", {controller: :carts, action: :show, id: :cart_empty}, class: "glyphicon glyphicon-shopping-cart cart" %>
-        </li>
-        <li>
-        <li>
-          <%= link_to "マイページ", user_path(current_user.id), class: 'glyphicon glyphicon-home' %>
-        </li>
-        <li>
-          <%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %>
-        </li>
-        <li>
-          <%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %>
-        </li>
-      </ul>
-
-      <% elsif artist_signed_in? %>
-
-      <ul class="nav navbar-nav navbar-right">
-        <p>こんにちは　<%= current_artist.name %>さん</p>
-        <li>
-          <%= link_to "商品を出品する", new_product_path, class: 'glyphicon glyphicon-bell sell' %>
-        </li>
-        <li>
-        <li>
-          <%= link_to "マイページ", artist_path(current_artist.id), class: 'glyphicon glyphicon-log-in sign_in' %>
-        </li>
-        <li>
-          <%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %>
-        </li>
-        <li>
-          <%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_artist_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %>
-        </li>
-      </ul>
-
-      <% else %>
-
-        <ul class="nav navbar-nav navbar-right">
-        <p>こんにちは　ゲストさん</p>
-        <li>
-          <%= link_to "ログイン", users_session_select_path, class: 'glyphicon glyphicon-log-in sign-in' %>
-        </li>
-        <li>
-          <%= link_to "会員登録", users_registration_select_path, class: 'glyphicon glyphicon-edit sign_up' %>
-        </li>
-        <li>
-          <%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %>
-        </li>
-        <li>
-          <%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %>
-        </li>
-      </ul>
-
-      <% end %>
-
-    </nav>
-  </div>
-</div>
-</header>
   <body>
+    <!-- Header -->
+    <header id="header">
+      <!-- Nav -->
+      <div id="nav">
+        <!-- Main Nav -->
+        <div id="nav-fixed">
+          <div class="container">
+            <!-- logo -->
+            <div class="nav-logo">
+              <li class="nav-logo-text"><%= link_to products_path do %>DIGRU<% end %></li>
+            </div>
+            <!-- /logo -->
+
+            <!-- nav -->
+            <% if user_signed_in? %>
+
+            <div class="nav-box">
+              <ul class="navbar-nav">
+                <li><%= link_to "カート", {controller: :carts, action: :show, id: :cart_empty}, class: "glyphicon glyphicon-shopping-cart cart" %></li>
+                <li><%= link_to "マイページ", user_path(current_user.id), class: 'glyphicon glyphicon-home' %></li>
+                <li class="cat-1"><%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %></li>
+                <li class="cat-2"><%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %></li>
+                <li class="cat-3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
+                <li class="cat-4"><a href="category.html">Jquery</a></li>
+              </ul>
+            </div>
+
+            <% elsif artist_signed_in? %>
+
+              <ul class="nav-menu nav navbar-nav">
+                <li><%= link_to new_product_path do %><p class="glyphicon glyphicon-bell cat-"></p><p>商品を出品する</p><% end %></li>
+                <li><%= link_to artists_product_history_path do %><p class="glyphicon glyphicon-management cat-"></p><p>受注商品管理</p><% end %></li>
+                <li class="cat-1"><%= link_to artist_path(current_artist.id) do %><p class="glyphicon glyphicon-log-in"></p><p>マイページ</p><% end %></li>
+                <li><%= link_to users_help_path do %><p class="glyphicon glyphicon-question-sign cat-2"></p><p>FAQ</p><% end %></li>
+                <li><%= link_to artists_path do %><p class="glyphicon glyphicon-headphones cat-3"></p><p>アーティスト一覧</p><% end %></li>
+                <li><%= link_to destroy_artist_session_path, method: :delete do %><p class="glyphicon glyphicon-log-out cat-4"></p><p>ログアウト</p><% end %></li>
+              </ul>
+
+            <% else %>
+
+            <div class="nav-box">
+              <ul class="nav-menu nav navbar-nav">
+                <li><%= link_to "ログイン", users_session_select_path, class: 'glyphicon glyphicon-log-in sign-in' %></li>
+                <li><%= link_to "会員登録", users_registration_select_path, class: 'glyphicon glyphicon-edit sign_up' %></li>
+                <li class="cat-1"><%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %></li>
+                <li class="cat-2"><%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %></li>
+                <li class="cat-3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
+                <li class="cat-4"><a href="category.html">Jquery</a></li>
+              </ul>
+            </div>
+
+            <% end %>
+            <!-- /nav -->
+
+          </div>
+        </div>
+      </div>
+    </header>
+
     <div class='container'>
       <%= yield %>
     </div>
+
   </body>
+
   <footer class="footer mt-auto py-3">
   <div class='container'>
     <div class='row'>
