--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="j">
+<html lang="ja">
   <head>
+    <%= csrf_meta_tags %>
+
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>DIGRU</title>
@@ -29,6 +29,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+
   </head>
 
   <body>
@@ -49,37 +50,36 @@
             <% if user_signed_in? %>
 
             <div class="nav-box">
-              <ul class="navbar-nav">
-                <li><%= link_to "カート", {controller: :carts, action: :show, id: :cart_empty}, class: "glyphicon glyphicon-shopping-cart cart" %></li>
-                <li><%= link_to "マイページ", user_path(current_user.id), class: 'glyphicon glyphicon-home' %></li>
-                <li class="cat-1"><%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %></li>
-                <li class="cat-2"><%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %></li>
-                <li class="cat-3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
-                <li class="cat-4"><a href="category.html">Jquery</a></li>
+              <ul class="nav-menu nav navbar-nav">
+                <li><%= link_to controller: :carts, action: :show, id: :cart_empty do %><p class="glyphicon glyphicon-cart cat-"></p><p>カート</p><% end %></li>
+                <li><%= link_to user_path(current_user.id), class:"cat-1" do %><p class="glyphicon glyphicon-home"></p><p>マイページ</p><% end %></li>
+                <li><%= link_to artists_path, class:"cat-2" do %><p class="glyphicon glyphicon-headphones"></p><p>アーティスト一覧</p><% end %></li>
+                <li><%= link_to users_help_path, class:"cat-3" do %><p class="glyphicon glyphicon-question-sign"></p><p>FAQ</p><% end %></li>
+                <li><%= link_to destroy_user_session_path, method: :delete, class:"cat-4" do %><p class="glyphicon glyphicon-log-out"></p><p>ログアウト</p><% end %></li>
               </ul>
             </div>
 
             <% elsif artist_signed_in? %>
 
+            <div class="nav-box">
               <ul class="nav-menu nav navbar-nav">
                 <li><%= link_to new_product_path do %><p class="glyphicon glyphicon-bell cat-"></p><p>商品を出品する</p><% end %></li>
-                <li><%= link_to artists_product_history_path do %><p class="glyphicon glyphicon-management cat-"></p><p>受注商品管理</p><% end %></li>
-                <li class="cat-1"><%= link_to artist_path(current_artist.id) do %><p class="glyphicon glyphicon-log-in"></p><p>マイページ</p><% end %></li>
-                <li><%= link_to users_help_path do %><p class="glyphicon glyphicon-question-sign cat-2"></p><p>FAQ</p><% end %></li>
-                <li><%= link_to artists_path do %><p class="glyphicon glyphicon-headphones cat-3"></p><p>アーティスト一覧</p><% end %></li>
-                <li><%= link_to destroy_artist_session_path, method: :delete do %><p class="glyphicon glyphicon-log-out cat-4"></p><p>ログアウト</p><% end %></li>
+                <li><%= link_to artists_product_history_path do %><p class="glyphicon glyphicon-cd"></p><p>受注商品管理</p><% end %></li>
+                <li><%= link_to artist_path(current_artist.id), class:"cat-1" do %><p class="glyphicon glyphicon-log-in"></p><p>マイページ</p><% end %></li>
+                <li><%= link_to users_help_path, class:"cat-2" do %><p class="glyphicon glyphicon-question-sign"></p><p>FAQ</p><% end %></li>
+                <li><%= link_to artists_path, class:"cat-3" do %><p class="glyphicon glyphicon-headphones"></p><p>アーティスト一覧</p><% end %></li>
+                <li><%= link_to destroy_artist_session_path, class:"cat-4", method: :delete do %><p class="glyphicon glyphicon-log-out"></p><p>ログアウト</p><% end %></li>
               </ul>
+            </div>
 
             <% else %>
 
             <div class="nav-box">
               <ul class="nav-menu nav navbar-nav">
-                <li><%= link_to "ログイン", users_session_select_path, class: 'glyphicon glyphicon-log-in sign-in' %></li>
-                <li><%= link_to "会員登録", users_registration_select_path, class: 'glyphicon glyphicon-edit sign_up' %></li>
-                <li class="cat-1"><%= link_to "アーティスト一覧", artists_path, class: 'glyphicon glyphicon-headphones artists' %></li>
-                <li class="cat-2"><%= link_to "FAQ", users_help_path, class: 'glyphicon glyphicon-question-sign help' %></li>
-                <li class="cat-3"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
-                <li class="cat-4"><a href="category.html">Jquery</a></li>
+                <li><%= link_to users_session_select_path, class:"cat-1" do %><p class="glyphicon glyphicon-log-in"></p><p>ログイン</p><% end %></li>
+                <li><%= link_to users_registration_select_path, class:"cat-2" do %><p class="glyphicon glyphicon-edit"></p><p>会員登録</p><% end %></li>
+                <li><%= link_to artists_path, class:"cat-3" do %><p class="glyphicon glyphicon-headphones"></p><p>アーティスト一覧</p><% end %></li>
+                <li><%= link_to users_help_path, class:"cat-4" do %><p class="glyphicon glyphicon-question-sign"></p><p>FAQ</p><% end %></li>
               </ul>
             </div>
 
