--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -30,44 +30,13 @@ RESPONSIVE
 	typography
 \*----------------------------*/
  body {
-     font-family: 'Nunito', sans-serif;
+     font-family: sans-serif;
      font-size: 16px;
      font-weight: 300;
      color: #3d455c;
      margin: 0;
-     padding: 50px 0 0 0;
+     padding: 150px 0 0 0;
      overflow-x: hidden;
-}
- h1, h2, h3, h4, h5, h6 {
-     font-family: 'Nunito Sans', sans-serif;
-     font-weight: 700;
-     color: #212631;
-     margin: 0px 0px 15px;
-}
- h1 {
-     font-size: 34px;
-}
- h2 {
-     font-size: 28px;
-}
- h3 {
-     font-size: 23px;
-}
- h4 {
-     font-size: 16px;
-}
- a {
-     font-weight: 600;
-     color: #212631;
-     text-decoration: none;
-}
- a:hover, a:focus{
-     color: #212631;
-     text-decoration: underline;
-     outline: none;
-}
- p {
-     margin: 0px 0px 20px;
 }
  ul,ol{
      margin: 0;
@@ -83,82 +52,6 @@ RESPONSIVE
 }
  ol.list-style {
      list-style-type: decimal;
-}
- blockquote.blockquote {
-     position:relative;
-     border-left:0;
-     font-weight:600;
-     margin-bottom:10px;
-	 padding: 20px;
-}
- blockquote.blockquote:before {
-     content: "``";
-     font-family: 'Nunito Sans', sans-serif;
-     display: block;
-     position: absolute;
-     left: -5px;
-     top: 5px;
-     font-size: 240px;
-     line-height: 200px;
-     color: #eceef2;
-     letter-spacing: -30px;
-     z-index: -2;
-}
- figure.figure-img {
-     margin-bottom:20px;
-}
- figure.figure-img figcaption {
-     padding-top:5px;
-     font-size: 13px;
-     font-weight:600;
-}
- .input {
-     height: 40px;
-     border: 2px solid #eceef2;
-     width: 100%;
-     padding: 0px 15px;
-     -webkit-transition: 0.2s border;
-     transition: 0.2s border;
-}
- .input:focus {
-     border-color: #3d455c;
-}
- textarea.input {
-     height: 90px;
-     padding: 15px;
-}
- .primary-button {
-     padding: 9px 45px;
-     border: none;
-     background-color: #212631;
-     font-weight: 600;
-     text-transform: uppercase;
-     font-size: 13px;
-     color: #fff;
-     -webkit-transition: 0.2s opacity;
-     transition: 0.2s opacity;
-}
- .primary-button:hover,.primary-button:focus {
-     color: #fff;
-     opacity: 0.9;
-}
- .section {
-     padding-top: 40px;
-}
- .section.section-grey {
-     background-color: #fbfbfd;
-     border-bottom: 1px solid #eceef2;
-     border-top: 1px solid #eceef2;
-}
- .section .section-title {
-     margin-bottom: 40px;
-}
- .section .section-title h2 {
-     text-transform: capitalize;
-     font-size: 28px;
-}
- .section-row {
-     margin-bottom:40px;
 }
 
 /*=========================================================
@@ -252,13 +145,15 @@ RESPONSIVE
 	logo
 \*----------------------------*/
 .nav-logo {
-     width: 20%;
-     float: left;
+     width: 100%;
+     margin: 0 auto;
+     padding: 20px 0;
 }
 
 .nav-logo li {
      text-align: center;
      list-style: none;
+     font-size: 40px;
 }
 /*----------------------------*\
 	menu
@@ -267,23 +162,30 @@ RESPONSIVE
 
 .navbar-nav {
      text-align: center;
+     width: 100%;
+}
+
+.navbar-nav li {
+     width: 16.5%;
+}
+
+.user li {
+     width: 20%;
+}
+
+.artist li {
+     width: 16.5%;
+}
+
+.not li {
+     width: 25%;
 }
 
  .nav-menu {
      margin-left: 20px;
 }
- .nav-menu li {
-     position: relative;
-     text-transform: capitalize;
-     -webkit-box-shadow: -1px 0px 0px 0px #eceef2 inset;
-     box-shadow: -1px 0px 0px 0px #eceef2 inset;
-     -webkit-transition: 0.2s color;
-     transition: 0.2s color;
-}
- .nav-menu li:first-child {
-     border-left: 1px solid #eceef2;
-}
- .nav-menu li a:after {
+
+ .nav-menu li :after {
      content: '';
      position: absolute;
      left: 0;
@@ -328,23 +230,5 @@ RESPONSIVE
  @media only screen and (max-width: 991px) {
      #nav .nav-menu {
          display: none;
-    }
-}
- @media only screen and (max-width: 767px) {
-	 .page-header h1 {
-		 font-size: 28px;
-	}
-     .post.post-row .post-img {
-         width: 100%;
-         float: none;
-    }
-     .post.post-row .post-body {
-         margin-left: 0px;
-    }
-     .post.post-row .post-meta {
-         margin-top: 15px;
-    }
-     .post.post-row .post-body p {
-         display:none;
     }
 }
