--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -19,6 +19,8 @@
 	margin: 10px 30px 10px 0px;
 }
 
+/* ranking */
+
 .ranking {
 	width: 100%;
 	height: 1120px;
@@ -37,7 +39,7 @@
 	color: red;
 }
 
-.ranking_rank {
+.ranking-rank {
 	float: left;
 	width: 20%;
 	font-size: 20px;
@@ -51,50 +53,67 @@
 	li:nth-child(1) {
 		padding-top: 5px;
 	}
+
+	/* 2, 3位 */
 	li:nth-child(n+2) {
 		padding-top: 40px;
 	}
-	li:nth-child(7) {
-		padding-top: 65px;
+
+	/* 4位 */
+	li:nth-child(n+6) {
+		padding-top: 62px;
 	}
+
+	/* 5位以降 */
 	li:nth-child(n+8) {
-		padding-top: 78px;
+		padding-top: 74px;
 	}
+
 }
 
 .rank1 {
 	width: 50%;
 	height: 50%;
 	background-color: #FFF;
-	border-radius: 100%;
-	border: solid 0.5px #e6b422;
 }
+
 .rank2 {
 	width: 50%;
 	height: 50%;
 	background-color: #FFF;
-	border-radius: 100%;
-	border: solid 0.5px #C0C0C0;
 }
+
 .rank3 {
 	width: 50%;
 	height: 50%;
 	background-color: #FFF;
-	border-radius: 100%;
-	border: solid 0.5px #C47022;
 }
 
-.ranking_box {
+.ranking-box {
 	float: left;
 	width: 80%;
 	padding-top: 20px;
 	margin-top: -10px;
 }
 
-.ranking_item {
+.ranking-item {
 	width: 80%;
-	padding-bottom: 25px;
 	margin: 0 auto;
+}
+
+.ranking-item:nth-child(n+2) {
+	padding-top: 13px;
+	width: 80%;
+	margin: 0 auto;
+}
+
+.ranking-product-image{
+	float: left;
+}
+
+.ranking-artist-name{
+	float: left;
+	padding: 10px 0 0 15px;
 }
 
 /* show */
@@ -135,7 +154,7 @@
 	background-color: green;
 }
 
-.show-sidebar{
+.show-sidebar {
 	width: 100%;
 	height: 1024px;
 	background-color: pink;
