--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -40,7 +40,7 @@
 		<div class="col-xs-4">
 			<div class="ranking">
 				<h4> 累計売り上げランキング TOP10</h4>
-				<div class="ranking_rank">
+				<div class="ranking-rank">
 					<li>1</li>
 					<%= image_tag 'rank1.png', class:"rank1" %>
 					<li>2</li>
@@ -55,16 +55,17 @@
 					<li>9</li>
 					<li>10</li>
 				</div>
-				<div class="ranking_box">
+				<div class= "ranking-box">
 					<% @test.each_key do |key| %>
 					    <% products = Product.find_by(id: key) %>
-					    <div class="ranking_item">
+					    <div class= "ranking-item">
 						    <%= link_to product_path(products) do %>
-						    	<%= attachment_image_tag products, :image, :fill, 80, 80, format: 'jpeg', fallback: "no_image.jpg" %>
-							    <%= products.name %>
-							   	/<%= products.artist.name %>
+						    	<p class= "ranking-product-image"><%= attachment_image_tag products, :image, :fill, 80, 80, format: 'jpeg', fallback: "no_image.jpg" %></p>
+							    <p class= "ranking-artist-name"><%= products.name %><br><br>
+							   	/<%= products.artist.name %></p>
 							<% end %>
 						</div>
+						<div class= "margin clearfix"></div>
 				    <% end %>
 				</div>
 			</div>
