--- a/app/views/users/help.html.erb
+++ b/app/views/users/help.html.erb
@@ -1,1 +1,31 @@
-<h1>Users#help</h1>
+<h1>サイトQ&A</h1>
+
+<div class="cp_qa">
+<h1>DIGRUとは</h1>
+<dl>
+	<dt>『DIGRU』ってどんなサイトですか？</dt>
+	<dd> DIGRUでは，まだ日本でメジャーデビューを果たしていないアーティストがリリースしている楽曲の視聴・購入できます．CDの販売はアーティスト自身が直接行っていますので，もし気に入ったCDがあれば，アーティストとの直接取引でCDを手に入れることができます．</dd>
+	<dt>『DIGRU』の意味を教えてください．</dt>
+	<dd>『DIGRU』は，英語の "dig(発掘)" をもとにした造語で，まだ広く知られていない未来のトップアーティストを「発掘す(dig)る」という意味が込められています．</dd>
+</dl>
+</div>
+
+<div class="cp_qa">
+<h1>CDの販売について</h1>
+<dl>
+	<dt> 質問</dt>
+	<dd> 回答</dd>
+	<dt> 質問</dt>
+	<dd> 回答</dd>
+</dl>
+</div>
+
+<div class="cp_qa">
+<h1>CDの購入について</h1>
+<dl>
+	<dt> 質問</dt>
+	<dd> 回答</dd>
+	<dt> 質問</dt>
+	<dd> 回答</dd>
+</dl>
+</div>
