--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -62,6 +62,10 @@
 	padding-top: 10px;
 }
 
+.y-stock {
+	color: #00FF00;
+}
+
 
 /* ranking */
 
@@ -189,7 +193,7 @@
 
 .product-information {
 	width: 100%;
-	height: 250px;
+	height: 300px;
 	padding: 0px 0px 0px 20px;
 }
 
