--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,10 +8,12 @@
 	<div class="row">
 		<div class="col-xs-8">
 			<!-- 商品の基本情報 -->
-			<div class="border" aria-hidden="true""> <span class="glyphicon glyphicon-headphones"> CD基本情報</span></div>
+			<div class="border" aria-hidden="true"">
+				<span class="glyphicon glyphicon-headphones"> CD基本情報</span>
+			</div>
 			<div class="product-information">
 				<div class="product-image">
-				<%= attachment_image_tag @product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "product-item-image" %>
+					<%= attachment_image_tag @product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "product-item-image" %>
 				</div>
 				<div class="product-information-text">
 					<p>商品情報：</p>
@@ -49,7 +51,10 @@
 			<!-- 商品の基本情報 -->
 
 			<!-- 動画埋め込み -->
-			<div class="border" aria-hidden="true""> <span class="glyphicon glyphicon-facetime-video"> ミュージックビデオ</span></div>
+			<div class="border" aria-hidden="true">
+				<span class="glyphicon glyphicon-facetime-video"> ミュージックビデオ</span>
+			</div>
+
 			<div class= "product-show-movie">
 				<div class= ""> <%= @product.movie_url.html_safe %></div>
 			</div>
