--- a/app/views/products/_disc_number_fields.html.erb
+++ b/app/views/products/_disc_number_fields.html.erb
@@ -1,9 +1,11 @@
-<div class="nested-fields" >
+<div class="nested-fields" id="music" style="border: 2px solid #000;" >
 	<%= f.text_field :disc_name, class: "" %>
-	    <%= f.fields_for :musics do |mf| %>
-        	<h4>曲名　　　　　　　順番</h4>
-        	<%= render partial: "music_fields", locals: {f: mf } %>
-    		<%= link_to_add_association "枚数を追加", f, :musics, class: "btn btn-success" %>
-    	<% end %>
-	<%= link_to_remove_association '削除', f, class: 'btn btn-info' %>
+    	<%= link_to_add_association "曲名を追加", f, :musics, class: "btn btn-success", 
+  'data-association-insertion-node' => '#music', 
+  'data-association-insertion-method' => 'append' %>
+	    <%= link_to_remove_association '枚数を削除', f, class: 'btn btn-info' %>
+	    	<%= f.fields_for :musics do |mf| %>
+        		<h4>曲名　　　　　　　順番</h4>
+        		<%= render partial: "music_fields", locals: {f: mf } %>
+    		<% end %>
 </div>
