--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,18 @@
 
 <!-- スライダー ランダム表示-->
-<div class="slider">
-	<% @ps.each do |product| %>
-	   	<div class="slick-slide">
-	    	<%= link_to product_path(product.id) do %>
-	    		<%= attachment_image_tag product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "slider-image" %>
-	    		<li class= "slider-product-item-name"><%= product.name %></li>
-	    		<li class= "slider-product-item-name">/<%= product.artist.name %></li>
-	   		<% end %>
-	   	</div>
-	<% end %>
-</div>
+<% if @products.count > 5  %>
+	<div class="slider">
+		<% @product_slider.first(10).each_with_index do |product| %>
+		   	<div class="slick-slide">
+		    	<%= link_to product_path(product.id) do %>
+		    		<%= attachment_image_tag product, :image, size: "200x200" , format: 'jpeg', fallback: "no_image.jpg", class: "slider-image" %>
+		    		<li class= "slider-product-item-name"><%= product.name %></li>
+		    		<li class= "slider-product-item-name">/<%= product.artist.name %></li>
+		   		<% end %>
+		   	</div>
+		<% end %>
+	</div>
+<% end %>
 <!-- スライダー -->
 
 <!-- 検索機能 -->
